TOO MANY CHANGES\n - Added a special scrollbar in .songcontainer \n - Added javascript code for the song selection \n - Added PHP code (not written by me) that allows for music to be played \n - Added getid3 (dependancy) \n - Fixed a few css and js bugs

--- a/style.css
+++ b/style.css
@@ -69,9 +69,14 @@ html, body {
 	margin-top: 20px;
 	display: flex;
 	align-items: center;
-    margin: 40px
-    /*-ms-transform: translateY(-50%);
-    transform: translateY(50%);*/
+    margin: 40px;
+	/*word-wrap: break-word;*/
+	hyphens: auto;
+}
+.song:hover{
+-webkit-box-shadow:inset 0px 0px 0px 5px #fff;
+    -moz-box-shadow:inset 0px 0px 0px 5px #fff;
+    box-shadow:inset 0px 0px 0px 5px #fff;
 }
 .songname,.songposition,.songartist,.songduration {
 	font-family: Arial;
@@ -85,7 +90,9 @@ html, body {
 }
 .songinfo{
 /*text-overflow: ellipsis; 
-word-break: break-all;*/
+word-break: break-all;
+word-wrap: break-word;*/
+hyphens: auto;
 padding-right: 100px;
 }
 .songinfo>h1{
@@ -110,8 +117,9 @@ margin-bottom: 40px !important
 		margin-right: 50px;
 	}
 	.songinfo{
-		/*text-overflow: ellipsis; 
-		word-break: break-all;*/
+		text-overflow: ellipsis; 
+		word-break: break-all;
+		word-wrap: break-word;
 		padding-right: 50px;
 	}
 	.songname{
@@ -122,17 +130,40 @@ margin-bottom: 40px !important
 		font-size:30px;
 		word-break: break-word;
 	}
+	.song{
+		word-wrap: break-word;
+	}
 	.songduration{
 		font-size:20px;
 		margin-bottom: 40px !important
+	}
+	#home{
+		display:none
 	}
 }
 @media only screen and (max-width: 500px){
 	.audiojs{
 		width: 70%;
-		resize: both;
+		resize: both
 	}
 	.scrubber{
-		display:none;
+		display:none
+	}
+	.songposition{
+		font-size: 20px;
+		margin-left: 20px;
+		margin-right: 10px
+	}
+	.songname{
+		margin-top: 40px !important;
+		font-size:30px;
+	}
+	.songartist{
+		font-size:20px;
+		word-break: break-word;
+	}
+	.songduration{
+		font-size:15px;
+		margin-bottom: 40px !important
 	}
 }
